charts/metallb/ingress-resource.yaml

# This works with a DNS or modification to the /hosts file to accept this domain

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-resource-1
spec:
    ingressClassName: nginx
      rules:
      - host: nginx.example.com
        http:
          paths:
          - path: /
            pathType: prefix
            backend:
              service:
                name: nginx-deploy-main
                port:
                  number: 80
